# Atium

./: .gitignore  README.md  pyproject.toml  requirements.txt
algorithms/multi_vehicle_mip/: ort.py  run_multi_vehicle_mip.py  standard_vehicles.py
algorithms/multi_vehicle_mip/implementation/: constraints.py  custom_types.py  definitions.py  multi_vehicle_mip.py  objective.py  standard_vehicles.py  utils.py  variables.py  visualization.py
algorithms/multi_vehicle_mip/implementation/setups/: mvmip_setup1.yaml  mvmip_setup2.yaml  utils.py  (+6 more)
algorithms/multi_vehicle_mip/results/: utils.py
algorithms/shortest_path_lp/: run_shortest_path_lp.py
algorithms/trajopt/: run_trajopt_cartpole.py  run_trajopt_rosenbrock.py
algorithms/trajopt/implementation/: trajopt.py  trajopt_utils.py
algorithms/trajopt/setups/: trajopt_rosenbrock_setup.py
atium/algorithms/multi_vehicle_mip/: run_multi_vehicle_mip.py
atium/algorithms/shortest_path_lp/: run_shortest_path_lp.py
atium/algorithms/trajopt/: run_trajopt_rosenbrock.py
atium/common/: attrs_utils.py  colors.py  geometry_utils.py  logging_utils.py  math_utils.py
atium/common/control/: basic_controllers.py  constructs.py
atium/common/optimization/: derivative_splicer.py
atium/core/constructs/: environment_map.py
atium/core/control/: basic_controllers.py  constructs.py
atium/core/definitions/: concrete_states.py  environment_map.py
atium/core/dynamics/: cartpole_dyn.py  constructs.py
atium/core/optimization/: constructs.py  derivative_splicer.py  qp_solver.py
atium/core/utils/: attrs_utils.py  color_utils.py  colors.py  constants.py  custom_exceptions.py  custom_types.py  file_utils.py  geometry_utils.py  img_utils.py  logging_utils.py  math_utils.py  transformation_utils.py
atium/experiments/runito/: run_runito.py  runito_scenarios.py  scenarios.py
atium/implementations/multi_vehicle_mip/: run_multi_vehicle_mip.py
atium/implementations/trajopt/: run_trajopt_rosenbrock.py
atium/implementations/unito/: run_unito.py  scenarios.py  unito_scenarios.py
common/: attrs_utils.py  colors.py  constants.py  custom_types.py  exceptions.py  file_utils.py  img_utils.py
common/control/: basic_controllers.py  constructs.py  controller.py  interfaces.py
common/dynamics/: cartpole_dyn.py  interfaces.py  utils.py
common/optimization/: constructs.py  derivative_splicer.py  jax_test.py  kernel.py  qp_solver.py  tag_opt_fn.py
common/optimization/shelved/: shelved_tag_opt_fn.py
common/optimization/standard_functions/: rosenbrock.py
common/optimization/tests/: test_derivative_splicer.py  test_tag_opt_fn.py
common/silicon/: silicon_simulator.py
common/simulation/envs/: cartpole_env.py
common/simulation/examples/: run_cartpole_sim.py
common/simulation/integrators/: state_integrators.py
common/simulation/silicon/: silicon_simulator.py
src/multi_vehicle_mip/: ort.py
src/multi_vehicle_mip/algorithm/: multi_vehicle_mip.py  utils.py
(+66 files in other folders)
